Minor updates to documentation for the ScalarWave thorn tutorials.

--- a/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
@@ -13,7 +13,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scalar Wave Initial Data\n",
+    "The goal of this tutorial is to construct two Einstein Toolkit (ETK) thorns that will set up and evolve some initial data according to the scalar wave equation, subject to appropriate boundary conditions. In a [previous tutorial](Tutorial-ScalarWave.ipynb), we contructed the evolution equations and initial data to do this. These thorns should function identically to the $\\text{WaveToy}$ and $\\text{IDScalarWaveC}$ thorns included in the Einstein Toolkit (ETK).\n",
+    "\n",
+    "We will construct the two thorns sequentially. Each thorn will be built in two steps.\n",
+    "\n",
+    "1. Call on NRPy+ to convert the SymPy expressions for the initial data/evolution equations into one C-code kernel.\n",
+    "1. Write the C code and build up the needed Einstein Toolkit infrastructure (i.e., the .ccl files).\n",
     "\n",
     "Now, we will move on to the second thorn. This thorn will set the initial data.\n",
     "\n",
