--- a/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
+++ b/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
@@ -13,9 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of this tutorial is to construct two Einstein Toolkit (ETK) thorns that will set up and evolve some initial data according to the scalar wave equation, subject to appropriate boundary conditions. In a [previous tutorial](Tutorial-ScalarWave.ipynb), we contructed the evolution equations and initial data to do this. These thorns should function identically to the $\\text{WaveToy}$ and $\\text{IDScalarWaveC}$ thorns included in the Einstein Toolkit (ETK).\n",
+    "The goal of this tutorial is to construct an Einstein Toolkit (ETK) thorn that will evolve some initial data according to the scalar wave equation, subject to appropriate boundary conditions. In a [previous tutorial](Tutorial-ScalarWave.ipynb), we contructed the evolution equations and initial data to do this. This thorn should function identically to the $\\text{WaveToy}$ thorns included in the Einstein Toolkit (ETK).\n",
     "\n",
-    "We will construct the two thorns sequentially. Each thorn will be built in two steps.\n",
+    "We will approach this in two steps.\n",
     "\n",
     "1. Call on NRPy+ to convert the SymPy expressions for the initial data/evolution equations into one C-code kernel.\n",
     "1. Write the C code and build up the needed Einstein Toolkit infrastructure (i.e., the .ccl files).\n",
