Added par files for WaveToy's fourth order convergence test. Started a parameter  check function for IDScalarWaveNRPy.

--- a/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
@@ -125,6 +125,15 @@
     "#include \"cctk_Parameters.h\"\n",
     "#include \"cctk_Arguments.h\"\n",
     "\n",
+    "void IDScalarWaveNRPy_param_check(CCTK_ARGUMENTS) {\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "  \n",
+    "  if (kk0 == 0 && kk1 == 0 && kk2 == 0) {\n",
+    "      CCTK_WARN(0,\"Wave vector is 0: The normalization will result in an error!\")\n",
+    "  }\n",
+    "}\n",
+    "\n",
     "void IDScalarWaveNRPy_InitialData(CCTK_ARGUMENTS)\n",
     "{\n",
     "  DECLARE_CCTK_ARGUMENTS\n",
