--- a/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Scalar Wave Equation: Creating an Einstein Toolkit Initial Data thorn\n",
+    "## IDScalarWaveNRPy: An Einstein Toolkit Initial Data Thorn for the Scalar Wave Equation\n",
     "\n",
     "### NRPy+ Source Code for this module: [ScalarWave/InitialData_PlaneWave.py](../edit/ScalarWave/InitialData_PlaneWave.py) , which is fully documented in the [previous NRPy+ tutorial module](Tutorial-ScalarWave.ipynb) on using NRPy+ to construct these scalar wave initial data as SymPy expressions.\n"
    ]
@@ -13,18 +13,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of this tutorial is to construct two Einstein Toolkit (ETK) thorns that will set up and evolve some initial data according to the scalar wave equation, subject to appropriate boundary conditions. In a [previous tutorial](Tutorial-ScalarWave.ipynb), we contructed the evolution equations and initial data to do this. These thorns should function identically to the $\\text{WaveToy}$ and $\\text{IDScalarWaveC}$ thorns included in the Einstein Toolkit (ETK).\n",
+    "In this part of the tutorial, we will construct an Einstein Toolkit (ETK) thorn (module) that will set up *initial data* for the scalar wave initial value problem. In a [previous tutorial module](Tutorial-ScalarWave.ipynb), we used NRPy+ to contruct the SymPy expressions for plane-wave initial data. This thorn is largely based on and should function similarly to the $\\text{IDScalarWaveC}$ thorn included in the Einstein Toolkit (ETK) $\\text{CactusWave}$ arrangement.\n",
     "\n",
-    "We will construct the two thorns sequentially. Each thorn will be built in two steps.\n",
+    "We will construct this thorn in two steps.\n",
     "\n",
-    "1. Call on NRPy+ to convert the SymPy expressions for the initial data/evolution equations into one C-code kernel.\n",
-    "1. Write the C code and build up the needed Einstein Toolkit infrastructure (i.e., the .ccl files).\n",
+    "1. Call on NRPy+ to convert the SymPy expressions for the initial data into one C-code kernel.\n",
+    "1. Write the C code and the needed Einstein Toolkit infrastructure (i.e., the .ccl files) to complete the Einstein Toolkit .\n",
     "\n",
-    "Now, we will move on to the second thorn. This thorn will set the initial data.\n",
+    "### Step 1: Call on NRPy+ to convert the SymPy expression for the scalar wave initial data into a C-code kernel. \n",
     "\n",
-    "### Step 1: Call on NRPy+ to convert the SymPy expressions for the Weyl scalars and associated invariants into one C-code kernel for each. \n",
-    "\n",
-    "The plane wave initial data are already constructed by [ScalarWave/InitialData_PlaneWave.py](../edit/ScalarWave/InitialData_PlaneWave.py), so we can simply import them to use here.\n",
+    "SymPy expressions for plane wave initial data are written inside [ScalarWave/InitialData_PlaneWave.py](../edit/ScalarWave/InitialData_PlaneWave.py), and we simply import them for use here.\n",
     "\n",
     "We will now output the C code for the header file to set plane wave initial data that will be evolved by the first thorn we made in this tutorial."
    ]
@@ -98,7 +96,7 @@
    "source": [
     "### Step 2: Interfacing with the Einstein Toolkit\n",
     "\n",
-    "#### Step 2a: Constructing the Einstein Toolkit calling functions that include the C code kernels.\n",
+    "#### Step 2a: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels.\n",
     "\n",
     "We will write another C file with the functions we need here."
    ]
@@ -154,11 +152,7 @@
     "\n",
     "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
     "\n",
-    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns.\n",
-    "1. $\\text{param.ccl}$: specifies free parameters within the thorn.\n",
-    "1. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions.\n",
-    "\n",
-    "We will also need to write an interface file for this thorn."
+    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns:"
    ]
   },
   {
@@ -184,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will need to write a param file for this thorn."
+    "2. $\\text{param.ccl}$: specifies free parameters within the thorn:"
    ]
   },
   {
@@ -239,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will need to write a schedule file for this thorn."
+    "3. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions."
    ]
   },
   {
