--- a/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb
@@ -18,13 +18,11 @@
     "We will construct this thorn in two steps.\n",
     "\n",
     "1. Call on NRPy+ to convert the SymPy expressions for the initial data into one C-code kernel.\n",
-    "1. Write the C code and the needed Einstein Toolkit infrastructure (i.e., the .ccl files) to complete the Einstein Toolkit .\n",
+    "1. Write the C code and linkages to the Einstein Toolkit infrastructure (i.e., the .ccl files) to complete this Einstein Toolkit module.\n",
     "\n",
     "### Step 1: Call on NRPy+ to convert the SymPy expression for the scalar wave initial data into a C-code kernel. \n",
     "\n",
-    "SymPy expressions for plane wave initial data are written inside [ScalarWave/InitialData_PlaneWave.py](../edit/ScalarWave/InitialData_PlaneWave.py), and we simply import them for use here.\n",
-    "\n",
-    "We will now output the C code for the header file to set plane wave initial data that will be evolved by the first thorn we made in this tutorial."
+    "After importing the core modules, we will set $\\text{GridFuncMemAccess}$ to $\\text{ETK}$. SymPy expressions for plane wave initial data are written inside [ScalarWave/InitialData_PlaneWave.py](../edit/ScalarWave/InitialData_PlaneWave.py), and we simply import them for use here."
    ]
   },
   {
@@ -152,7 +150,8 @@
     "\n",
     "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
     "\n",
-    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns:"
+    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns. Specifically, this file governs the interaction between this thorn and others; more information can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). \n",
+    "With \"implements\", we give our thorn its unique name. By \"inheriting\" other thorns, we tell the Toolkit that we will rely on variables that exist and are declared \"public\" within those functions."
    ]
   },
   {
@@ -178,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. $\\text{param.ccl}$: specifies free parameters within the thorn:"
+    "2. $\\text{param.ccl}$: specifies free parameters within the thorn, enabling them to be set at runtime. It is required to provide allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3)."
    ]
   },
   {
@@ -233,7 +232,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions."
+    "3. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions. $\\text{schedule.ccl}$'s official documentation may be found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
+    "\n",
+    "We specify here the standardized ETK \"scheduling bins\" in which we want each of our thorn's functions to run."
    ]
   },
   {
