Added a function to output constraint violation.

--- a/Tutorial-ETK_thorn-MaxwellEvol.ipynb
+++ b/Tutorial-ETK_thorn-MaxwellEvol.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,35 +51,19 @@
     "#          Maxwell/MaxwellCartesian_Evol.py module.\n",
     "import Maxwell.MaxwellCartesian_Evol as mwrhs\n",
     "mwrhs.MaxwellCartesian_Evol()\n",
-    "# Step 4: Register gridfunctions so they can be written to by NRPy.\n",
+    "\n",
+    "# Step 2: Register gridfunctions so they can be written to by NRPy.\n",
     "# System I:\n",
     "AIrhsD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AIrhsD\")\n",
     "EIrhsD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"EIrhsD\")\n",
     "psiIrhs = gri.register_gridfunctions(\"EVOL\",\"psiIrhs\")\n",
     "\n",
-    "# Step 5: Set the uu and vv gridfunctions to the uu_Evol & vv_Evol variables \n",
-    "#         defined by InitialData_PlaneWave().\n",
+    "# Step 3: Set the rhs gridfunctions to their variables \n",
+    "#         defined by MaxwellEvol().\n",
     "for i in range(DIM):\n",
     "    AIrhsD[i] = mwrhs.ArhsD[i]\n",
     "    EIrhsD[i] = mwrhs.ErhsD[i]\n",
     "psiIrhs = mwrhs.psi_rhs\n",
-    "\n",
-    "# Step 4: Register gridfunctions so they can be written to by NRPy.\n",
-    "# System II:\n",
-    "AIIrhsD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AIIrhsD\")\n",
-    "EIIrhsD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"EIIrhsD\")\n",
-    "psiIIrhs = gri.register_gridfunctions(\"EVOL\",\"psiIIrhs\")\n",
-    "Gammarhs = gri.register_gridfunctions(\"EVOL\",\"Gammarhs\")\n",
-    "\n",
-    "# Step 5: Set the uu and vv gridfunctions to the uu_Evol & vv_Evol variables \n",
-    "#         defined by InitialData_PlaneWave().\n",
-    "for i in range(DIM):\n",
-    "    AIIrhsD[i] = mwrhs.ArhsD[i]\n",
-    "    EIIrhsD[i] = mwrhs.ErhsD[i]\n",
-    "psiIIrhs = mwrhs.psi_rhs\n",
-    "Gammarhs = mwrhs.Gamma_rhs\n",
-    "\n",
-    "# Step 6: Create the C code output kernel.\n",
     "Maxwell_Evol_to_printI = [\\\n",
     "                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AIrhsD0\"),rhs=AIrhsD[0]),\\\n",
     "                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AIrhsD1\"),rhs=AIrhsD[1]),\\\n",
@@ -88,6 +72,31 @@
     "                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"EIrhsD1\"),rhs=EIrhsD[1]),\\\n",
     "                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"EIrhsD2\"),rhs=EIrhsD[2]),\\\n",
     "                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psiIrhs\"),rhs=psiIrhs)]\n",
+    "Maxwell_Evol_CcodeKernelI = fin.FD_outputC(\"returnstring\",Maxwell_Evol_to_printI).replace(\"AD\",\"AID\")\\\n",
+    "                                                                                 .replace(\"ED\",\"EID\")\\\n",
+    "                                                                                 .replace(\"psiGF\",\"psiIGF\")\n",
+    "\n",
+    "gri.glb_gridfcs_list = []\n",
+    "# Step 1c: Call the MaxwellCartesian_Evol() function from within the\n",
+    "#          Maxwell/MaxwellCartesian_Evol.py module.\n",
+    "par.set_parval_from_str(\"System_to_use\",\"System_II\")\n",
+    "mwrhs.MaxwellCartesian_Evol()\n",
+    "# Step 2: Register gridfunctions so they can be written to by NRPy.\n",
+    "# System II:\n",
+    "AIIrhsD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"AIIrhsD\")\n",
+    "EIIrhsD = ixp.register_gridfunctions_for_single_rank1(\"EVOL\",\"EIIrhsD\")\n",
+    "psiIIrhs = gri.register_gridfunctions(\"EVOL\",\"psiIIrhs\")\n",
+    "Gammarhs = gri.register_gridfunctions(\"EVOL\",\"Gammarhs\")\n",
+    "# Step 3: Set the rhs gridfunctions to their variables \n",
+    "#         defined by MaxwellEvol().\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    AIIrhsD[i] = mwrhs.ArhsD[i]\n",
+    "    EIIrhsD[i] = mwrhs.ErhsD[i]\n",
+    "psiIIrhs = mwrhs.psi_rhs\n",
+    "Gammarhs = mwrhs.Gamma_rhs\n",
+    "\n",
+    "# Step 4: Create the C code output kernel.\n",
     "Maxwell_Evol_to_printII = [\\\n",
     "                          lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AIIrhsD0\"),rhs=AIIrhsD[0]),\\\n",
     "                          lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AIIrhsD1\"),rhs=AIIrhsD[1]),\\\n",
@@ -97,9 +106,6 @@
     "                          lhrh(lhs=gri.gfaccess(\"out_gfs\",\"EIIrhsD2\"),rhs=EIIrhsD[2]),\\\n",
     "                          lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psiIIrhs\"),rhs=psiIIrhs),\\\n",
     "                          lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Gammarhs\"),rhs=Gammarhs)]\n",
-    "Maxwell_Evol_CcodeKernelI = fin.FD_outputC(\"returnstring\",Maxwell_Evol_to_printI).replace(\"AD\",\"AID\")\\\n",
-    "                                                                                 .replace(\"ED\",\"EID\")\\\n",
-    "                                                                                 .replace(\"psiGF\",\"psiIGF\")\n",
     "Maxwell_Evol_CcodeKernelII = fin.FD_outputC(\"returnstring\",Maxwell_Evol_to_printII).replace(\"AD\",\"AIID\")\\\n",
     "                                                                                   .replace(\"ED\",\"EIID\")\\\n",
     "                                                                                   .replace(\"psiGF\",\"psiIIGF\")\n",
@@ -108,16 +114,26 @@
     "                               [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
     "                               (Maxwell_Evol_CcodeKernelI+Maxwell_Evol_CcodeKernelII).replace(\"time\",\"cctk_time\"))\n",
     "\n",
-    "# Step 7: Create directories for the thorn if they don't exist.\n",
+    "# Step 5: Create directories for the thorn if they don't exist.\n",
     "!mkdir MaxwellEvol     2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
     "!mkdir MaxwellEvol/src 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
     "\n",
-    "# Step 8: Write the C code kernel to file.\n",
+    "# Step 6: Write the C code kernel to file.\n",
     "with open(\"MaxwellEvol/src/Maxwell_Evol.h\", \"w\") as file:\n",
     "    file.write(str(Maxwell_Evol_looped))\n",
     "\n",
     "with open(\"MaxwellEvol/src/NRPy_params.h\", \"w\") as file:\n",
-    "    file.write(\"#define FD_CENTDERIVS_ORDER \"+str(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\"))+\"\\n\")"
+    "    file.write(\"#define FD_CENTDERIVS_ORDER \"+str(par.parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\"))+\"\\n\")\n",
+    "    \n",
+    "# Step 7: Create a C code kernel to evaluate the constraint violation\n",
+    "Cviola_CcodeKernel = fin.FD_outputC(\"returnstring\",[lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Cviola\"),rhs=mwrhs.Cviola)])\n",
+    "Cviola_CcodeKernel_geminated = (Cviola_CcodeKernel.replace(\"ED\",\"EID\").replace(\"Cviola\",\"CviolaI\") + \\\n",
+    "                                Cviola_CcodeKernel.replace(\"ED\",\"EIID\").replace(\"Cviola\",\"CviolaII\"))\n",
+    "Cviola_CcodeKernel_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"1\",\"1\",\"1\"],[\"cctk_lsh[2]-1\",\"cctk_lsh[1]-1\",\"cctk_lsh[0]-1\"],\\\n",
+    "                                     [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
+    "                                     Cviola_CcodeKernel_geminated.replace(\"time\",\"cctk_time\"))\n",
+    "with open(\"MaxwellEvol/src/Constraint_violation.h\", \"w\") as file:\n",
+    "    file.write(str(Cviola_CcodeKernel_looped))\n"
    ]
   },
   {
@@ -133,9 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting MaxwellEvol/src/MaxwellEvol.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile MaxwellEvol/src/MaxwellEvol.c\n",
     "#include <math.h>\n",
@@ -147,6 +171,23 @@
     "#include \"Symmetry.h\"\n",
     "\n",
     "#include \"NRPy_params.h\"\n",
+    "\n",
+    "void MaxwellEvol_calc_constraint_violation(CCTK_ARGUMENTS) {\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "  \n",
+    "  const CCTK_REAL invdx0 = 1.0 / (CCTK_DELTA_SPACE(0));\n",
+    "  const CCTK_REAL invdx1 = 1.0 / (CCTK_DELTA_SPACE(1));\n",
+    "  const CCTK_REAL invdx2 = 1.0 / (CCTK_DELTA_SPACE(2));\n",
+    "  const CCTK_REAL *gammaDD00GF = gxx;\n",
+    "  const CCTK_REAL *gammaDD01GF = gxy;\n",
+    "  const CCTK_REAL *gammaDD02GF = gxz;\n",
+    "  const CCTK_REAL *gammaDD11GF = gyy;\n",
+    "  const CCTK_REAL *gammaDD12GF = gyz;\n",
+    "  const CCTK_REAL *gammaDD22GF = gzz;\n",
+    "\n",
+    "    #include \"Constraint_violation.h\"\n",
+    "}\n",
     "\n",
     "void MaxwellEvol_set_rhs(CCTK_ARGUMENTS) {\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
@@ -283,6 +324,7 @@
     "  SetCartSymVN(cctkGH, sym,\"MaxwellEvol::EID1GF\");\n",
     "  SetCartSymVN(cctkGH, sym,\"MaxwellEvol::EID2GF\");\n",
     "  SetCartSymVN(cctkGH, sym,\"MaxwellEvol::psiIGF\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"MaxwellEvol::CviolaIGF\");\n",
     "  SetCartSymVN(cctkGH, sym,\"MaxwellEvol::AIID0GF\");\n",
     "  SetCartSymVN(cctkGH, sym,\"MaxwellEvol::AIID1GF\");\n",
     "  SetCartSymVN(cctkGH, sym,\"MaxwellEvol::AIID2GF\");\n",
@@ -291,6 +333,7 @@
     "  SetCartSymVN(cctkGH, sym,\"MaxwellEvol::EIID2GF\");\n",
     "  SetCartSymVN(cctkGH, sym,\"MaxwellEvol::psiIIGF\");\n",
     "  SetCartSymVN(cctkGH, sym,\"MaxwellEvol::GammaGF\");\n",
+    "  SetCartSymVN(cctkGH, sym,\"MaxwellEvol::CviolaIIGF\");\n",
     "\n",
     "  return;\n",
     "}\n",
@@ -335,9 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting MaxwellEvol/interface.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile MaxwellEvol/interface.ccl\n",
     "implements: MaxwellEvol\n",
@@ -385,7 +436,19 @@
     "cctk_real system_II type = GF Timelevels=3 tags='tensortypealias=\"Scalar\"'\n",
     "{\n",
     "  AIID0GF,AIID1GF,AIID2GF,EIID0GF,EIID1GF,EIID2GF,psiIIGF,GammaGF\n",
-    "} \"The evolved scalar fields\"\n"
+    "} \"The evolved scalar fields\"\n",
+    "\n",
+    "public:\n",
+    "cctk_real system_I_constraint_violation type = GF Timelevels=3 tags='tensortypealias=\"Scalar\"'\n",
+    "{\n",
+    "  CviolaIGF\n",
+    "} \"The constraint violation for system I\"\n",
+    "\n",
+    "public:\n",
+    "cctk_real system_II_constraint_violation type = GF Timelevels=3 tags='tensortypealias=\"Scalar\"'\n",
+    "{\n",
+    "  CviolaIIGF\n",
+    "} \"The constraint violation for system II\"\n"
    ]
   },
   {
@@ -397,9 +460,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting MaxwellEvol/param.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile MaxwellEvol/param.ccl\n",
     "shares: MethodOfLines\n",
@@ -460,21 +531,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting MaxwellEvol/schedule.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile MaxwellEvol/schedule.ccl\n",
     "STORAGE: system_I_rhs[timelevels]\n",
     "STORAGE: system_I[timelevels]\n",
     "STORAGE: system_II_rhs[timelevels]\n",
     "STORAGE: system_II[timelevels]\n",
+    "STORAGE: system_I_constraint_violation[timelevels]\n",
+    "STORAGE: system_II_constraint_violation[timelevels]\n",
     "\n",
     "schedule MaxwellEvol_InitSymBound at BASEGRID\n",
     "{\n",
     "  LANG: C\n",
     "  OPTIONS: global\n",
     "} \"Schedule symmetries\"\n",
+    "\n",
+    "schedule MaxwellEvol_calc_constraint_violation IN CCTK_ANALYSIS\n",
+    "{\n",
+    "  LANG: C\n",
+    "  READS: admbase::gxx(Everywhere)\n",
+    "  READS: admbase::gxy(Everywhere)\n",
+    "  READS: admbase::gxz(Everywhere)\n",
+    "  READS: admbase::gyy(Everywhere)\n",
+    "  READS: admbase::gyz(Everywhere)\n",
+    "  READS: admbase::gzz(Everywhere)\n",
+    "  READS: EID0GF(Everywhere)\n",
+    "  READS: EID1GF(Everywhere)\n",
+    "  READS: EID2GF(Everywhere)\n",
+    "  READS: EIID0GF(Everywhere)\n",
+    "  READS: EIID1GF(Everywhere)\n",
+    "  READS: EIID2GF(Everywhere)\n",
+    "  WRITES: CviolaIGF(Interior)\n",
+    "  WRITES: CviolaIIGF(Interior)\n",
+    "}\"Calculate the contraint violation of the simulation\"\n",
     "\n",
     "schedule MaxwellEvol_set_rhs as WaveToy_Evolution IN MoL_CalcRHS\n",
     "{\n",
@@ -552,9 +652,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting MaxwellEvol/src/make.code.defn\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile MaxwellEvol/src/make.code.defn\n",
     "SRCS = MaxwellEvol.c"
