--- a/Tutorial-MaxwellCartesian.ipynb
+++ b/Tutorial-MaxwellCartesian.ipynb
@@ -192,7 +192,7 @@
     "    ArhsD[i] = -ED[i] - psi_dD[i]\n",
     "    ErhsD[i] = -LapAD[i] + DivA_dD[i]\n",
     "psi_rhs = -DivA\n",
-    "    \n",
+    "\n",
     "# Step 6: Generate C code for System I Maxwell's evolution equations,\n",
     "#         print output to the screen (standard out, or stdout).\n",
     "#lhrh_list = []\n",
@@ -208,6 +208,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To evaluate our results, we will need to measure how much our simulation differs from what should be physically possible. We will do this with the constraint equation $D_i E^i = 4 \\pi \\rho_e$; specifically, we will measure the constraint violation \n",
+    "\\begin{align}\n",
+    "\\mathcal{C} &= D_i E^i - 4 \\pi \\rho_e \\\\\n",
+    "&= D_i (\\gamma^{ij} E_j) - 4 \\pi \\rho_e \\\\\n",
+    "&= \\gamma^{ij} D_i E_j + E_j D_i \\gamma^{ij} - 4 \\pi \\rho_e \\\\\n",
+    "&= \\gamma^{ij} D_i E_j,\n",
+    "\\end{align}\n",
+    "since the covariant derivative of the metric tensor is $0$ and $\\rho_e=0$ in free space. So, $\\mathcal{C} = \\gamma^{ij} (E_{j,i} - \\Gamma^b_{ij} E_b)$, which will be valid for both systems."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ED_dD = ixp.declarerank2(\"ED_dD\",\"nosym\")\n",
+    "Cviola = gri.register_gridfunctions(\"AUX\", [\"Cviola\"])\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for b in range(DIM):\n",
+    "            Cviola += gammaUU[i][j] * (ED_dD[j][i] - GammaUDD[b][i][j]*ED[b])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### NRPy+ Module Code Validation\n",
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the RHSs of Maxwell's equations (in System I) between\n",
@@ -217,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +263,8 @@
       "ArhsD[1] - mwevol.ArhsD[1] = 0\n",
       "ErhsD[1] - mwevol.ErhsD[1] = 0\n",
       "ArhsD[2] - mwevol.ArhsD[2] = 0\n",
-      "ErhsD[2] - mwevol.ErhsD[2] = 0\n"
+      "ErhsD[2] - mwevol.ErhsD[2] = 0\n",
+      "Cviola - mwevol.Cviola = 0\n"
      ]
     }
    ],
@@ -261,7 +290,9 @@
     "for i in range(DIM):\n",
     "\n",
     "    print(\"ArhsD[\"+str(i)+\"] - mwevol.ArhsD[\"+str(i)+\"] = \" + str(ArhsD[i] - mwevol.ArhsD[i]))\n",
-    "    print(\"ErhsD[\"+str(i)+\"] - mwevol.ErhsD[\"+str(i)+\"] = \" + str(ErhsD[i] - mwevol.ErhsD[i]))\n"
+    "    print(\"ErhsD[\"+str(i)+\"] - mwevol.ErhsD[\"+str(i)+\"] = \" + str(ErhsD[i] - mwevol.ErhsD[i]))\n",
+    "\n",
+    "print(\"Cviola - mwevol.Cviola = \" + str(Cviola - mwevol.Cviola))\n"
    ]
   },
   {
@@ -273,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +383,8 @@
       "ArhsD[1] - mwevol.ArhsD[1] = 0\n",
       "ErhsD[1] - mwevol.ErhsD[1] = 0\n",
       "ArhsD[2] - mwevol.ArhsD[2] = 0\n",
-      "ErhsD[2] - mwevol.ErhsD[2] = 0\n"
+      "ErhsD[2] - mwevol.ErhsD[2] = 0\n",
+      "Cviola - mwevol.Cviola = 0\n"
      ]
     }
    ],
@@ -375,7 +407,9 @@
     "for i in range(DIM):\n",
     "\n",
     "    print(\"ArhsD[\"+str(i)+\"] - mwevol.ArhsD[\"+str(i)+\"] = \" + str(ArhsD[i] - mwevol.ArhsD[i]))\n",
-    "    print(\"ErhsD[\"+str(i)+\"] - mwevol.ErhsD[\"+str(i)+\"] = \" + str(ErhsD[i] - mwevol.ErhsD[i]))\n"
+    "    print(\"ErhsD[\"+str(i)+\"] - mwevol.ErhsD[\"+str(i)+\"] = \" + str(ErhsD[i] - mwevol.ErhsD[i]))\n",
+    "\n",
+    "print(\"Cviola - mwevol.Cviola = \" + str(Cviola - mwevol.Cviola))\n"
    ]
   },
   {
@@ -407,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
