Fixed a bug in Maxwell initial data.

--- a/Tutorial-MaxwellCartesian.ipynb
+++ b/Tutorial-MaxwellCartesian.ipynb
@@ -443,7 +443,23 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8*amp*gammaDD00*lam**2*y*exp(-lam*(x**2 + y**2 + z**2))\n",
+      "8*amp*gammaDD00*lam**2*y*exp(-lam*(x**2 + y**2 + z**2)) + 8*amp*gammaDD01*lam**2*y*exp(-lam*(x**2 + y**2 + z**2))\n",
+      "8*amp*gammaDD00*lam**2*y*exp(-lam*(x**2 + y**2 + z**2)) + 8*amp*gammaDD01*lam**2*y*exp(-lam*(x**2 + y**2 + z**2))\n",
+      "8*amp*gammaDD01*lam**2*y*exp(-lam*(x**2 + y**2 + z**2))\n",
+      "8*amp*gammaDD01*lam**2*y*exp(-lam*(x**2 + y**2 + z**2)) + 8*amp*gammaDD11*lam**2*y*exp(-lam*(x**2 + y**2 + z**2))\n",
+      "8*amp*gammaDD01*lam**2*y*exp(-lam*(x**2 + y**2 + z**2)) + 8*amp*gammaDD11*lam**2*y*exp(-lam*(x**2 + y**2 + z**2))\n",
+      "8*amp*gammaDD02*lam**2*y*exp(-lam*(x**2 + y**2 + z**2))\n",
+      "8*amp*gammaDD02*lam**2*y*exp(-lam*(x**2 + y**2 + z**2)) + 8*amp*gammaDD12*lam**2*y*exp(-lam*(x**2 + y**2 + z**2))\n",
+      "8*amp*gammaDD02*lam**2*y*exp(-lam*(x**2 + y**2 + z**2)) + 8*amp*gammaDD12*lam**2*y*exp(-lam*(x**2 + y**2 + z**2))\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Declare free parameters intrinsic to these initial data\n",
     "amp = par.Cparameters(\"REAL\",thismodule,\"amp\")\n",
@@ -457,13 +473,14 @@
     "# Set the coordinate transformations:\n",
     "radial = sp.sqrt(x*x + y*y + z*z)\n",
     "polar = sp.atan2(sp.sqrt(x*x + y*y),z)\n",
-    "EU_phi = 8*amp*radial*sp.sin(polar)*lam*lam*sp.exp(lam*radial*radial)\n",
+    "EU_phi = 8*amp*radial*sp.sin(polar)*lam*lam*sp.exp(-lam*radial*radial)\n",
     "EidU[0] = (y * EU_phi)/sp.sqrt(x*x + y*y)\n",
     "EidU[1] = (y * EU_phi)/sp.sqrt(x*x + y*y)\n",
     "# The z component (2)is zero. \n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        EidD[i] += gammaDD[i][j] * EidU[j]\n",
+    "        print(str(EidD[i]))\n",
     "      \n",
     "psi_ID = sp.sympify(0)\n",
     "Gamma_ID = sp.sympify(0)"
