Corrected the error causing system I to use system II equations; fixed error counting ghostzones.

--- a/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
@@ -102,7 +102,7 @@
     "                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"Gamma\"),rhs=Gamma),]\n",
     "Maxwell_ID_CcodeKernel = fin.FD_outputC(\"returnstring\",Maxwell_ID_to_print)\n",
     "\n",
-    "Maxwell_ID_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"1\",\"1\",\"1\"],[\"cctk_lsh[2]-1\",\"cctk_lsh[1]-1\",\"cctk_lsh[0]-1\"],\\\n",
+    "Maxwell_ID_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],[\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
     "                               [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
     "                               Maxwell_ID_CcodeKernel.replace(\"time\",\"cctk_time\"))\n",
     "\n",
