--- a/Tutorial-GRMHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRMHD_Equations-Cartesian.ipynb
@@ -77,8 +77,8 @@
     "where we have used $\\vel = \\uvec/u^0$.  This gives me $\\rhostar$ and $\\uvec$.  We note that the metric is (B&S 2.122)\n",
     "\\begin{equation}\n",
     "g_{\\mu\\nu} = \\begin{pmatrix} \n",
-    "-\\lapse^2 + \\shift\\cdot\\shift & \\shift \\\\\n",
-    "\\shift & \\gamma_{ij}\n",
+    "-\\lapse^2 + \\shift\\cdot\\shift & \\beta_i \\\\\n",
+    "\\beta_j & \\gamma_{ij}\n",
     "\\end{pmatrix},\n",
     "\\end{equation}\n",
     "which then gives \n",
@@ -86,19 +86,70 @@
     "u^0 = \\left(\\lapse^2 - \\shift\\cdot\\shift - 2\\shift\\cdot\\vel - \\gamma_{ij}v^iv^j\\right)^{-1/2},\n",
     "\\end{equation}\n",
     "\n",
+    "The other thing is $\\uvec = u^0\\vel$.  So then we can proceed and spit out the conservative variables: $\\rhostar, \\Svectilde$.\n",
+    "\n",
+    "To get $\\tau$, we note that we have defined the metric as the covariant form, e.g., lower indices.  The upper form of $g^{\\mu\\nu}$ is found in B&S 2.119 and is given by\n",
+    "\\begin{equation}\n",
+    "g^{\\mu\\nu} = \n",
+    "\\begin{pmatrix}\n",
+    "-\\lapse^{-2} & \\lapse^{-2}\\beta^i \\\\\n",
+    "\\lapse^{-2}\\beta^j & \\gamma^{ij} - \\lapse^{-2} \\beta^i\\beta^j\n",
+    "\\end{pmatrix}\n",
+    "\\end{equation}\n",
+    "We will need the full form in a bit, but for now we note that $\\tau = \\lapse^2\\rtgamma T^{00} - \\rhostar$, which gives\n",
+    "\\begin{equation}\n",
+    "\\tau = \\lapse\\rhostar h u^0 - P\\rtgamma - \\rhostar\n",
+    "\\end{equation}\n",
+    "\n",
     "The code for this is "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0/sqrt(-gammaijDD00*shift0**2 - 2*gammaijDD00*shift0*v0 - gammaijDD00*v0**2 - 2*gammaijDD01*shift0*shift1 - 2*gammaijDD01*shift0*v1 - 2*gammaijDD01*shift1*v0 - 2*gammaijDD01*v0*v1 - 2*gammaijDD02*shift0*shift2 - 2*gammaijDD02*shift0*v2 - 2*gammaijDD02*shift2*v0 - 2*gammaijDD02*v0*v2 - gammaijDD11*shift1**2 - 2*gammaijDD11*shift1*v1 - gammaijDD11*v1**2 - 2*gammaijDD12*shift1*shift2 - 2*gammaijDD12*shift1*v2 - 2*gammaijDD12*shift2*v1 - 2*gammaijDD12*v1*v2 - gammaijDD22*shift2**2 - 2*gammaijDD22*shift2*v2 - gammaijDD22*v2**2 + lapse**2)\n"
+      "/*\n",
+      " *  Original SymPy expressions:\n",
+      " *  \"[u0 = 1.0/sqrt(-gammaDD00*shiftU0**2 - 2*gammaDD00*shiftU0*vU0 - gammaDD00*vU0**2 - 2*gammaDD01*shiftU0*shiftU1 - 2*gammaDD01*shiftU0*vU1 - 2*gammaDD01*shiftU1*vU0 - 2*gammaDD01*vU0*vU1 - 2*gammaDD02*shiftU0*shiftU2 - 2*gammaDD02*shiftU0*vU2 - 2*gammaDD02*shiftU2*vU0 - 2*gammaDD02*vU0*vU2 - gammaDD11*shiftU1**2 - 2*gammaDD11*shiftU1*vU1 - gammaDD11*vU1**2 - 2*gammaDD12*shiftU1*shiftU2 - 2*gammaDD12*shiftU1*vU2 - 2*gammaDD12*shiftU2*vU1 - 2*gammaDD12*vU1*vU2 - gammaDD22*shiftU2**2 - 2*gammaDD22*shiftU2*vU2 - gammaDD22*vU2**2 + lapse**2),\n",
+      " *    ux = 1.0*vU0/sqrt(-gammaDD00*shiftU0**2 - 2*gammaDD00*shiftU0*vU0 - gammaDD00*vU0**2 - 2*gammaDD01*shiftU0*shiftU1 - 2*gammaDD01*shiftU0*vU1 - 2*gammaDD01*shiftU1*vU0 - 2*gammaDD01*vU0*vU1 - 2*gammaDD02*shiftU0*shiftU2 - 2*gammaDD02*shiftU0*vU2 - 2*gammaDD02*shiftU2*vU0 - 2*gammaDD02*vU0*vU2 - gammaDD11*shiftU1**2 - 2*gammaDD11*shiftU1*vU1 - gammaDD11*vU1**2 - 2*gammaDD12*shiftU1*shiftU2 - 2*gammaDD12*shiftU1*vU2 - 2*gammaDD12*shiftU2*vU1 - 2*gammaDD12*vU1*vU2 - gammaDD22*shiftU2**2 - 2*gammaDD22*shiftU2*vU2 - gammaDD22*vU2**2 + lapse**2),\n",
+      " *    uy = 1.0*vU1/sqrt(-gammaDD00*shiftU0**2 - 2*gammaDD00*shiftU0*vU0 - gammaDD00*vU0**2 - 2*gammaDD01*shiftU0*shiftU1 - 2*gammaDD01*shiftU0*vU1 - 2*gammaDD01*shiftU1*vU0 - 2*gammaDD01*vU0*vU1 - 2*gammaDD02*shiftU0*shiftU2 - 2*gammaDD02*shiftU0*vU2 - 2*gammaDD02*shiftU2*vU0 - 2*gammaDD02*vU0*vU2 - gammaDD11*shiftU1**2 - 2*gammaDD11*shiftU1*vU1 - gammaDD11*vU1**2 - 2*gammaDD12*shiftU1*shiftU2 - 2*gammaDD12*shiftU1*vU2 - 2*gammaDD12*shiftU2*vU1 - 2*gammaDD12*vU1*vU2 - gammaDD22*shiftU2**2 - 2*gammaDD22*shiftU2*vU2 - gammaDD22*vU2**2 + lapse**2),\n",
+      " *    uz = 1.0*vU2/sqrt(-gammaDD00*shiftU0**2 - 2*gammaDD00*shiftU0*vU0 - gammaDD00*vU0**2 - 2*gammaDD01*shiftU0*shiftU1 - 2*gammaDD01*shiftU0*vU1 - 2*gammaDD01*shiftU1*vU0 - 2*gammaDD01*vU0*vU1 - 2*gammaDD02*shiftU0*shiftU2 - 2*gammaDD02*shiftU0*vU2 - 2*gammaDD02*shiftU2*vU0 - 2*gammaDD02*vU0*vU2 - gammaDD11*shiftU1**2 - 2*gammaDD11*shiftU1*vU1 - gammaDD11*vU1**2 - 2*gammaDD12*shiftU1*shiftU2 - 2*gammaDD12*shiftU1*vU2 - 2*gammaDD12*shiftU2*vU1 - 2*gammaDD12*vU1*vU2 - gammaDD22*shiftU2**2 - 2*gammaDD22*shiftU2*vU2 - gammaDD22*vU2**2 + lapse**2),\n",
+      " *    rhostar = 1.0*lapse*rho*rtgamma/sqrt(-gammaDD00*shiftU0**2 - 2*gammaDD00*shiftU0*vU0 - gammaDD00*vU0**2 - 2*gammaDD01*shiftU0*shiftU1 - 2*gammaDD01*shiftU0*vU1 - 2*gammaDD01*shiftU1*vU0 - 2*gammaDD01*vU0*vU1 - 2*gammaDD02*shiftU0*shiftU2 - 2*gammaDD02*shiftU0*vU2 - 2*gammaDD02*shiftU2*vU0 - 2*gammaDD02*vU0*vU2 - gammaDD11*shiftU1**2 - 2*gammaDD11*shiftU1*vU1 - gammaDD11*vU1**2 - 2*gammaDD12*shiftU1*shiftU2 - 2*gammaDD12*shiftU1*vU2 - 2*gammaDD12*shiftU2*vU1 - 2*gammaDD12*vU1*vU2 - gammaDD22*shiftU2**2 - 2*gammaDD22*shiftU2*vU2 - gammaDD22*vU2**2 + lapse**2),\n",
+      " *    Sx = 1.0*lapse*rho*rtgamma*vU0*(epsilon*gamma + 1)/(-gammaDD00*shiftU0**2 - 2*gammaDD00*shiftU0*vU0 - gammaDD00*vU0**2 - 2*gammaDD01*shiftU0*shiftU1 - 2*gammaDD01*shiftU0*vU1 - 2*gammaDD01*shiftU1*vU0 - 2*gammaDD01*vU0*vU1 - 2*gammaDD02*shiftU0*shiftU2 - 2*gammaDD02*shiftU0*vU2 - 2*gammaDD02*shiftU2*vU0 - 2*gammaDD02*vU0*vU2 - gammaDD11*shiftU1**2 - 2*gammaDD11*shiftU1*vU1 - gammaDD11*vU1**2 - 2*gammaDD12*shiftU1*shiftU2 - 2*gammaDD12*shiftU1*vU2 - 2*gammaDD12*shiftU2*vU1 - 2*gammaDD12*vU1*vU2 - gammaDD22*shiftU2**2 - 2*gammaDD22*shiftU2*vU2 - gammaDD22*vU2**2 + lapse**2),\n",
+      " *    Sy = 1.0*lapse*rho*rtgamma*vU1*(epsilon*gamma + 1)/(-gammaDD00*shiftU0**2 - 2*gammaDD00*shiftU0*vU0 - gammaDD00*vU0**2 - 2*gammaDD01*shiftU0*shiftU1 - 2*gammaDD01*shiftU0*vU1 - 2*gammaDD01*shiftU1*vU0 - 2*gammaDD01*vU0*vU1 - 2*gammaDD02*shiftU0*shiftU2 - 2*gammaDD02*shiftU0*vU2 - 2*gammaDD02*shiftU2*vU0 - 2*gammaDD02*vU0*vU2 - gammaDD11*shiftU1**2 - 2*gammaDD11*shiftU1*vU1 - gammaDD11*vU1**2 - 2*gammaDD12*shiftU1*shiftU2 - 2*gammaDD12*shiftU1*vU2 - 2*gammaDD12*shiftU2*vU1 - 2*gammaDD12*vU1*vU2 - gammaDD22*shiftU2**2 - 2*gammaDD22*shiftU2*vU2 - gammaDD22*vU2**2 + lapse**2),\n",
+      " *    Sz = 1.0*lapse*rho*rtgamma*vU2*(epsilon*gamma + 1)/(-gammaDD00*shiftU0**2 - 2*gammaDD00*shiftU0*vU0 - gammaDD00*vU0**2 - 2*gammaDD01*shiftU0*shiftU1 - 2*gammaDD01*shiftU0*vU1 - 2*gammaDD01*shiftU1*vU0 - 2*gammaDD01*vU0*vU1 - 2*gammaDD02*shiftU0*shiftU2 - 2*gammaDD02*shiftU0*vU2 - 2*gammaDD02*shiftU2*vU0 - 2*gammaDD02*vU0*vU2 - gammaDD11*shiftU1**2 - 2*gammaDD11*shiftU1*vU1 - gammaDD11*vU1**2 - 2*gammaDD12*shiftU1*shiftU2 - 2*gammaDD12*shiftU1*vU2 - 2*gammaDD12*shiftU2*vU1 - 2*gammaDD12*vU1*vU2 - gammaDD22*shiftU2**2 - 2*gammaDD22*shiftU2*vU2 - gammaDD22*vU2**2 + lapse**2),\n",
+      " *    tau = -epsilon*rho*rtgamma*(gamma - 1) + 1.0*lapse**2*rho*rtgamma*(epsilon*gamma + 1)/(-gammaDD00*shiftU0**2 - 2*gammaDD00*shiftU0*vU0 - gammaDD00*vU0**2 - 2*gammaDD01*shiftU0*shiftU1 - 2*gammaDD01*shiftU0*vU1 - 2*gammaDD01*shiftU1*vU0 - 2*gammaDD01*vU0*vU1 - 2*gammaDD02*shiftU0*shiftU2 - 2*gammaDD02*shiftU0*vU2 - 2*gammaDD02*shiftU2*vU0 - 2*gammaDD02*vU0*vU2 - gammaDD11*shiftU1**2 - 2*gammaDD11*shiftU1*vU1 - gammaDD11*vU1**2 - 2*gammaDD12*shiftU1*shiftU2 - 2*gammaDD12*shiftU1*vU2 - 2*gammaDD12*shiftU2*vU1 - 2*gammaDD12*vU1*vU2 - gammaDD22*shiftU2**2 - 2*gammaDD22*shiftU2*vU2 - gammaDD22*vU2**2 + lapse**2) - 1.0*lapse*rho*rtgamma/sqrt(-gammaDD00*shiftU0**2 - 2*gammaDD00*shiftU0*vU0 - gammaDD00*vU0**2 - 2*gammaDD01*shiftU0*shiftU1 - 2*gammaDD01*shiftU0*vU1 - 2*gammaDD01*shiftU1*vU0 - 2*gammaDD01*vU0*vU1 - 2*gammaDD02*shiftU0*shiftU2 - 2*gammaDD02*shiftU0*vU2 - 2*gammaDD02*shiftU2*vU0 - 2*gammaDD02*vU0*vU2 - gammaDD11*shiftU1**2 - 2*gammaDD11*shiftU1*vU1 - gammaDD11*vU1**2 - 2*gammaDD12*shiftU1*shiftU2 - 2*gammaDD12*shiftU1*vU2 - 2*gammaDD12*shiftU2*vU1 - 2*gammaDD12*vU1*vU2 - gammaDD22*shiftU2**2 - 2*gammaDD22*shiftU2*vU2 - gammaDD22*vU2**2 + lapse**2)]\"\n",
+      " */\n",
+      "{\n",
+      "   const double tmp0 = pow(lapse, 2);\n",
+      "   const double tmp1 = 2*gammaDD01*shiftU0;\n",
+      "   const double tmp2 = 2*gammaDD01*vU0;\n",
+      "   const double tmp3 = 2*gammaDD02*shiftU0;\n",
+      "   const double tmp4 = 2*gammaDD02*vU0;\n",
+      "   const double tmp5 = 2*gammaDD12*shiftU1;\n",
+      "   const double tmp6 = 2*gammaDD12*vU1;\n",
+      "   const double tmp7 = -gammaDD00*pow(shiftU0, 2) - 2*gammaDD00*shiftU0*vU0 - gammaDD00*pow(vU0, 2) - gammaDD11*pow(shiftU1, 2) - 2*gammaDD11*shiftU1*vU1 - gammaDD11*pow(vU1, 2) - gammaDD22*pow(shiftU2, 2) - 2*gammaDD22*shiftU2*vU2 - gammaDD22*pow(vU2, 2) - shiftU1*tmp1 - shiftU1*tmp2 - shiftU2*tmp3 - shiftU2*tmp4 - shiftU2*tmp5 - shiftU2*tmp6 + tmp0 - tmp1*vU1 - tmp2*vU1 - tmp3*vU2 - tmp4*vU2 - tmp5*vU2 - tmp6*vU2;\n",
+      "   const double tmp8 = 1.0/sqrt(tmp7);\n",
+      "   const double tmp9 = lapse*rho*rtgamma*tmp8;\n",
+      "   const double tmp10 = epsilon*gamma + 1;\n",
+      "   const double tmp11 = 1.0/tmp7;\n",
+      "   const double tmp12 = 1.0*lapse*rho*rtgamma*tmp10*tmp11;\n",
+      "   const double tmp13 = rho*rtgamma;\n",
+      "   u0 = tmp8;\n",
+      "   ux = tmp8*vU0;\n",
+      "   uy = tmp8*vU1;\n",
+      "   uz = tmp8*vU2;\n",
+      "   rhostar = tmp9;\n",
+      "   Sx = tmp12*vU0;\n",
+      "   Sy = tmp12*vU1;\n",
+      "   Sz = tmp12*vU2;\n",
+      "   tau = -epsilon*tmp13*(gamma - 1) + 1.0*tmp0*tmp10*tmp11*tmp13 - tmp9;\n",
+      "}\n"
      ]
     }
    ],
@@ -109,31 +160,71 @@
     "\n",
     "DIM = 3\n",
     "# Declare rank-1 contravariant (\"v\") vector\n",
-    "v = ixp.declarerank1(\"v\")\n",
-    "shift = ixp.declarerank1(\"shift\")\n",
-    "lapse = sp.symbols(\"lapse\")\n",
+    "vU = ixp.declarerank1(\"vU\")\n",
+    "shiftU = ixp.declarerank1(\"shiftU\")\n",
+    "lapse, rtgamma, rho, epsilon, gamma = sp.symbols(\"lapse rtgamma rho epsilon gamma\")\n",
     "\n",
     "# Declare rank-2 covariant gmunu\n",
-    "gammaijDD = ixp.declarerank2(\"gammaijDD\",\"sym01\")\n",
+    "gammaDD = ixp.declarerank2(\"gammaDD\",\"sym01\")\n",
     "\n",
     "beta2 = 0\n",
     "for i in range(DIM) :\n",
     "    for j in range(DIM) :\n",
-    "        beta2 += gammaijDD[i][j] * shift[i]*shift[j]\n",
+    "        beta2 += gammaDD[i][j] * shiftU[i]*shiftU[j]\n",
     "        \n",
     "betaDotV = 0 \n",
     "for i in range(DIM) :\n",
     "    for j in range(DIM) :\n",
-    "        betaDotV += gammaijDD[i][j] * shift[i]*v[j]\n",
+    "        betaDotV += gammaDD[i][j] * shiftU[i]*vU[j]\n",
     "        \n",
     "v2 = 0\n",
     "for i in range(DIM) :\n",
     "    for j in range(DIM) :\n",
-    "         v2 += gammaijDD[i][j] * v[i]*v[j]\n",
+    "         v2 += gammaDD[i][j] * vU[i]*vU[j]\n",
     "\n",
     "u0 = 1./sp.sqrt( lapse*lapse - beta2 - 2*betaDotV - v2)\n",
     "\n",
-    "outputC(u0)"
+    "uvecU = ixp.declarerank1(\"uvecU\")\n",
+    "StildeU = ixp.declarerank1(\"StildeU\")\n",
+    "\n",
+    "rhostar = lapse*rtgamma*rho*u0\n",
+    "h = 1 + gamma*epsilon\n",
+    "\n",
+    "for i in range(DIM): \n",
+    "    uvecU[i] = vU[i]*u0\n",
+    "    StildeU[i] = uvecU[i]*rhostar*h\n",
+    "\n",
+    "P = (gamma - 1)*rho*epsilon\n",
+    "tau = lapse*rhostar*h*u0 - rtgamma*P - rhostar\n",
+    "from outputC import *\n",
+    "str = outputC([u0, uvecU[0], uvecU[1], uvecU[2], rhostar, StildeU[0], StildeU[1], StildeU[2], tau], [\"u0\", \"ux\", \"uy\", \"uz\", \"rhostar\", \"Sx\", \"Sy\", \"Sz\", \"tau\"], filename=\"returnstring\")\n",
+    "print str"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conservative to Primitive Solver\n",
+    "\n",
+    "We now discuss the reverse mapping from conservative to primitive variables.\n",
+    "Given the lapse, shift vector and $\\rtgamma$, the mapping between primitive and conserved variable is straightforward.  However, the reverse is not as simple.  In GRMHD, the conservative to primitive solver is amplified by the inclusion of the magnetic field, leading to rather sophisticated root finding strategies.  The failure rates of these algorithms are low (??), but since this algorithm may be executed several times per timestep for every gridpoint, even a low failure can give unacceptable collective failure rates.  However, for purely polytropic equations of state, e.g., $P\\propto\\rho^{\\Gamma_1}$, the convervative to primitive variable solver is greatly simplified.  \n",
+    "\n",
+    "To construct the conservative-to-primitive variable solver, we restrict ourselves to polytropic equations of states\n",
+    "\\begin{equation}\n",
+    "P = P_0\\left(\\frac{\\rho}{\\rho_0}\\right)^{\\Gamma_1} \\quad\\textrm{and}\\quad \\epsilon = \\epsilon_0\\left(\\frac{\\rho}{\\rho_0}\\right)^{\\Gamma_1-1},\n",
+    "\\end{equation}\n",
+    "where $P_0$, $\\rho_0$, and $\\epsilon_0$ are the fiducial pressure, density, and internal energy, and we have used the relation $P = (\\Gamma_1 - 1)\\rho\\epsilon$.  \n",
+    "\n",
+    "For such a polytropic equation of state, the energy equation is redundant and effectively we are only concerned with the continuity and momentum equations. The conservative variables of concern are $\\rhostar$ and $\\Svectilde$.  Noting that the shift, $\\alpha$, and $\\rtgamma$ are provided by the Einsteins field equation solver, we can write\n",
+    "\\begin{equation}\n",
+    "u^0 = \\frac{\\rhostar}{\\alpha\\rtgamma\\rho} = u^0(\\rho)  \\quad\\textrm{and}\\quad \\uvec = \\frac{\\Svectilde}{\\alpha\\rtgamma\\rho h} = \\uvec(\\rho).\n",
+    "\\end{equation}\n",
+    "Noting that the four velocity $u^2 = g_{\\mu\\nu}u^{\\mu}u^{\\nu} = g^{00}u^0u^0 + 2g^{0i}u^0\\uvec^i + g_{ij}\\uvec^i\\uvec^j = -1$, we have\n",
+    "\\begin{equation}\n",
+    " 0 = \\alpha^2\\gamma\\rho^2h^2 + \\left(-\\lapse^2 + \\shift\\cdot\\shift\\right)\\rhostar^2h^2 + 2h\\rhostar\\shift\\cdot\\Svectilde + \\Svectilde\\cdot\\Svectilde,\n",
+    "\\end{equation}\n",
+    "which is an implicit equation of $\\rho$, which can be inverted by standard nonlinear root finding algorithms, e.g., Newton-raphson.\n"
    ]
   },
   {
